# batterylog

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.sh  README.md  UNINSALL.sh  batterylog.py  batterylog.system-sleep  pyproject.toml  schema.sql
docs/: AUR-update.md  IMPLEMENTATION.md  MIGRATION.md  PLAN.md  PUBLISH.md  README.md  RESEARCH.md  TESTING.md
packaging/aur/: PKGBUILD
scripts/: smoke_packaging.py
src/batterylog/: __init__.py  cli.py  core.py  db.py  hook.py  migrate.py  paths.py  power.py  project.py  schema.py  version.py
tests/: test_cli.py  test_core.py  test_hook.py  test_legacy_shim.py  test_migrate.py
