[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batterylog"
version = "0.2.0"
description = "Linux laptop battery suspend and resume logging tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
keywords = ["battery", "cli", "linux", "power", "suspend", "systemd"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Logging",
  "Topic :: Utilities",
]
dependencies = [
  "tomli>=2,<3; python_version < '3.11'",
]

[project.scripts]
batterylog = "batterylog.cli:console_main"

[project.urls]
Homepage = "https://github.com/lhl/batterylog"
Repository = "https://github.com/lhl/batterylog"
Changelog = "https://github.com/lhl/batterylog/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/batterylog"]

[tool.hatch.build.targets.wheel.force-include]
"schema.sql" = "batterylog/schema.sql"

[tool.hatch.build.targets.sdist]
include = [
  "/src/batterylog",
  "/batterylog.py",
  "/batterylog.system-sleep",
  "/INSTALL.sh",
  "/schema.sql",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/docs",
  "/scripts",
  "/pyproject.toml",
]

[tool.uv]
dev-dependencies = [
  "build>=1,<2",
  "pytest>=8,<9",
  "twine>=5,<7",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
